# back/swagger.json
@@ -108,6 +108,20 @@
           }
         }
       }
+    },
+    "/confirmation/{token}": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "token",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {}
+      }
     }
   }
 }
